--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
     <div class="player" role="region" aria-label="Reproductor simple">
         <!-- Cambia el src por la ruta a tu archivo .mp3/.ogg (no funciona directamente con enlaces de YouTube) -->
-        <audio id="audio" src="/imagenes/musica.mp3" preload="metadata"></audio>
+        <audio id="audio" src="imagenes/musica.mp3" preload="metadata"></audio>
 
         <button id="playPause" aria-label="Reproducir" title="Reproducir">
             <!-- Icono "play" (se reemplaza dinámicamente en JS) -->
