--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
             <br>
             <br>
             <div class="cuadro">
-                <h2>Si crees que es niño</h2>
+                <h2>Si crees que es Niño</h2>
                 <p>Traer pañales.(Huggies Dermacare)</p>
                 <br>
-                <h2>Si crees que es niña</h2>
+                <h2>Si crees que es Niña</h2>
                 <p>Traer toallitas húmedas.(Babysec Aqua)</p>
             </div>
         </section>
