--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <section codigoVestimenta class="vestimenta swiper-slide">
             <div class="cuadro">
                 <img imagen alt="" class="animate" data-swiper-parallax="-300">
-                <h2 class="animate" data-swiper-parallax="-300">Codigo de vestimenta</h2>
+                <h2 class="animate" data-swiper-parallax="-300">Código de vestimenta</h2>
                 <ul class="animate">
                     <li class="blanco" data-swiper-parallax="-300">Blanco</li>
                     <li class="beige" data-swiper-parallax="-300">Beige</li>
